--- a/package.json
+++ b/package.json
@@ -15,6 +15,13 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^13.1.5",
+    "@types/jest": "^27.0.2",
+    "@types/node": "^16.9.6",
+    "@types/react": "^17.0.24",
+    "@types/react-beautiful-dnd": "^13.1.2",
+    "@types/react-dom": "^17.0.9",
+    "@types/react-icons": "^3.0.0",
+    "@types/uuid": "^8.3.1",
     "bootstrap": "^4.6.0",
     "classnames": "^2.3.1",
     "clsx": "^1.1.1",
@@ -45,6 +52,7 @@
     "@html-eslint/eslint-plugin": "^0.9.0",
     "@html-eslint/parser": "^0.9.0",
     "@testing-library/dom": "^7.30.4",
+    "@types/styled-components": "^5.1.14",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
     "cross-env": "^7.0.3",
@@ -70,7 +78,7 @@
     "jest": "^26.6.0",
     "lint-staged": "^10.5.4",
     "start-server-and-test": "^1.12.5",
-    "typescript": "^4.2.4"
+    "typescript": "^4.4.3"
   },
   "scripts": {
     "start": "cross-env BROWSER=none react-scripts start",
